changed spectrogram parameter plot

--- a/Spectogram_parameter_optimization.ipynb
+++ b/Spectogram_parameter_optimization.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e4a99f779da4359b1651754e2941299",
+       "model_id": "b85034705c044f7ba8bb7008a286f0cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -256,6 +256,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Original parameters "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -264,7 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12 12 12\n"
+      "12 12 12 12\n"
      ]
     }
    ],
@@ -275,7 +282,43 @@
     "\n",
     "win_l=[512, 2048, 8192,  2048, 2048, 2048, 256, 300, 350, 400, 450, 512]\n",
     "\n",
-    "print(len(nffts), len(hop_l), len(win_l))"
+    "win_t=['hann', 'hann', 'hann', 'hann', 'hann', 'hann', 'hann', 'hann', 'hann', 'hann', 'hann', 'hann']\n",
+    "\n",
+    "\n",
+    "print(len(nffts), len(hop_l), len(win_l), len(win_t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### New parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 9 9 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "nffts=[4096, 4096, 4096, 4096, 4096, 4096, 4096, 4096, 4096]\n",
+    "\n",
+    "hop_l=[32, 32, 32, 32, 32, 32, 32, 32, 32]\n",
+    "\n",
+    "win_l=[256, 300, 350, 400, 450, 512, 1024, 2048, 4096]\n",
+    "\n",
+    "win_t=['hann', 'hann', 'hann', 'hann', 'hann', 'hann', 'hann', 'hann', 'hann']\n",
+    "\n",
+    "\n",
+    "print(len(nffts), len(hop_l), len(win_l), len(win_t))"
    ]
   },
   {
@@ -287,13 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3295549bbf6b4135a416a821027235b7",
+       "model_id": "f2485fa2f74746d0b90612b7c7c1942d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -308,65 +351,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 3\n",
-      "0\n",
-      "0 0\n"
+      "3 3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-22-2a1ad70d6e54>:59: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  current_axis.set_yticklabels(new_yticks)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "0 1\n",
-      "2\n",
-      "0 2\n",
-      "3\n",
-      "1 0\n",
-      "4\n",
-      "1 1\n",
-      "5\n",
-      "1 2\n",
-      "6\n",
-      "2 0\n",
-      "7\n",
-      "2 1\n",
-      "8\n",
-      "2 2\n",
-      "9\n",
-      "3 0\n",
-      "10\n",
-      "3 1\n",
-      "11\n",
-      "3 2\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "The number of FixedLocator locations (0), usually from a call to set_ticks, does not match the number of ticklabels (8).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-2a1ad70d6e54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0mcbar_ax\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfigure\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_axes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.91\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.008\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0mcb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolorbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcbar_ax\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m \u001b[0mcb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_xticklabels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_yticklabels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrotation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Python/3.8/site-packages/matplotlib/axes/_base.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mget_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__module__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mowner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__module__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Python/3.8/site-packages/matplotlib/cbook/deprecation.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    449\u001b[0m                 \u001b[0;34m\"parameter will become keyword-only %(removal)s.\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    450\u001b[0m                 name=name, obj_type=f\"parameter of {func.__name__}()\")\n\u001b[0;32m--> 451\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    452\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    453\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Python/3.8/site-packages/matplotlib/axis.py\u001b[0m in \u001b[0;36m_set_ticklabels\u001b[0;34m(self, labels, fontdict, minor, **kwargs)\u001b[0m\n\u001b[1;32m   1791\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfontdict\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1792\u001b[0m             \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfontdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1793\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_ticklabels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mminor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mminor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1794\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1795\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mcbook\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_keyword_only\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"3.2\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"minor\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Python/3.8/site-packages/matplotlib/axis.py\u001b[0m in \u001b[0;36mset_ticklabels\u001b[0;34m(self, ticklabels, minor, **kwargs)\u001b[0m\n\u001b[1;32m   1712\u001b[0m             \u001b[0;31m# remove all tick labels, so only error for > 0 ticklabels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1713\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlocs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mticklabels\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mticklabels\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1714\u001b[0;31m                 raise ValueError(\n\u001b[0m\u001b[1;32m   1715\u001b[0m                     \u001b[0;34m\"The number of FixedLocator locations\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1716\u001b[0m                     \u001b[0;34mf\" ({len(locator.locs)}), usually from a call to\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: The number of FixedLocator locations (0), usually from a call to set_ticks, does not match the number of ticklabels (8)."
+      "<ipython-input-10-23de16dfdd89>:45: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "  current_axis.set_yticklabels(new_yticks)\n",
+      "<ipython-input-10-23de16dfdd89>:55: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "  current_axis.set_xticklabels(new_xticks)\n"
      ]
     }
    ],
    "source": [
-    "#Prepare plot \n",
+    "# Prepare plot \n",
     "plt.close()\n",
     "cols=3\n",
     "rows=math.ceil(len(nffts)/3)\n",
@@ -374,16 +374,13 @@
     "\n",
     "print(rows, cols)\n",
     "\n",
-    "#Plot\n",
+    "# Plot\n",
     "y, sr=open_wav(the_wav, sample_rate)\n",
     "for p in range(len(nffts)):\n",
-    "    print(p)\n",
     "    \n",
     "    #Define plot position in terms of row and column position\n",
     "    r=math.floor(p/3)\n",
     "    c=p%3\n",
-    "    \n",
-    "    print(r, c)\n",
     "    \n",
     "    current_axis=axes[r, c]\n",
     "\n",
@@ -391,124 +388,66 @@
     "\n",
     "    img = librosa.display.specshow(Ydb, cmap='seismic', sr=sample_rate, x_axis='time', y_axis='fft', ax=current_axis, hop_length=hop_l[p])\n",
     "    \n",
-    "    #if p%3==2: \n",
-    "    #cb=plt.colorbar(img, ax=current_axis, ) \n",
-    "        #cb.set_label('Power\\n[dB re to {} {}^2]'.format(ref_value, raw_unit), rotation=270, labelpad=+15, fontsize=8)\n",
-    "    \n",
-    "    #current_axis.set_xlabel('Time [s]')\n",
     "    \n",
     "    #Set axis-limits - specific for where in the plot you want to zoom in!\n",
     "    y_lim=current_axis.set_ylim()[1]\n",
     "    x_lim=current_axis.set_xlim()[1]\n",
     "    current_axis.set_ylim((16000/50000)*y_lim, (20000/50000)*y_lim)\n",
     "    current_axis.set_xlim((1.450/3)*x_lim, (1.650/3)*x_lim)\n",
-    "    \n",
-    "    # Set y-axis label\n",
-    "    #if p%3==0:\n",
-    "        #current_axis.set_ylabel('Frequency [kHz]', fontsize=9)\n",
-    "    #elif p%3==1 or p%3==2 : \n",
-    "    \n",
-    "    #current_axis.set_xlabel('Time [s]')\n",
+    "\n",
     "    \n",
     "    #Set automatic labels to invisible\n",
     "    current_axis.yaxis.label.set_visible(False)\n",
     "    current_axis.xaxis.label.set_visible(False)\n",
     "    \n",
     "    # Add white legend with parameters\n",
-    "    current_axis.text(0, 0.6, '\\n fs: {}kHz\\n nfft: {}\\n hop_len:{}\\n win_len: {}'.format(sample_rate/1000,nffts[p], hop_l[p], win_l[p]), fontsize = 5,  color = 'w', transform=current_axis.transAxes)\n",
-    "    \n",
+    "    current_axis.text(0, 0.6, '\\n fs: {}kHz\\n nfft: {}\\n hop_len:{}\\n win_len: {}\\n win_type: {}'.format(sample_rate/1000,nffts[p], hop_l[p], win_l[p], win_t[p]), fontsize = 5,  color = 'w', transform=current_axis.transAxes)\n",
     "    current_axis.tick_params(axis='both', which='major', labelsize=5)\n",
     "    \n",
     "    \n",
-    "    #convert y-axis ticklabels to kHz!\n",
-    "    locs=current_axis.get_yticks()\n",
-    "    y_ticks = []\n",
-    "    new_yticks=[d/1000 for d in locs]\n",
-    "    current_axis.set_yticklabels(new_yticks)\n",
+    "    if p%3==0:\n",
+    "        #convert y-axis ticklabels to kHz!\n",
+    "        locs=current_axis.get_yticks()\n",
+    "        y_ticks = []\n",
+    "        new_yticks=[d/1000 for d in locs]\n",
+    "        current_axis.set_yticklabels(new_yticks)\n",
+    "    else:\n",
+    "        current_axis.yaxis.set_visible(False)\n",
+    "\n",
+    "    \n",
+    "    if p in list(range(len(nffts)))[-3:]:\n",
+    "        #Round x-axis ticklabels\n",
+    "        locs=current_axis.get_xticks()\n",
+    "        x_ticks = []\n",
+    "        new_xticks=[round(d, 2) for d in locs]\n",
+    "        current_axis.set_xticklabels(new_xticks)\n",
+    "    else:\n",
+    "        current_axis.xaxis.set_visible(False)\n",
     "    \n",
     "    \n",
     "#Set overall labels\n",
     "figure.text(0.5, 0.04, 'Time [s]', ha='center')\n",
-    "figure.text(0.04, 0.5,'Frequency [kHz]', ha='center', rotation=90)\n",
-    "figure.text(0.96, 0.5,'Power\\n[dB re to {} {}^2]'.format(ref_value, raw_unit), ha='center', rotation=270)\n",
+    "figure.text(0.04, 0.5,'Frequency [kHz]', va='center', rotation=90)\n",
+    "figure.text(0.97, 0.5,'Power\\n[dB re to {} {}^2]'.format(ref_value, raw_unit), va='center', rotation=270)\n",
     "\n",
-    "cbar_ax = figure.add_axes([0.91, 0.15, 0.008, 0.7])\n",
+    "cbar_ax = figure.add_axes([0.915, 0.15, 0.008, 0.7])\n",
     "cb=figure.colorbar(img, cax=cbar_ax)\n",
-    "cb.ax.set_xticklabels(cb.ax.get_yticklabels(),rotation=-30)\n",
-    "\n",
+    "cb.ax.tick_params(labelsize=8) \n",
+    "cb.ax.tick_params(labelrotation=45) \n",
+    "plt.suptitle('Frequency vs time resolution trade-off')\n",
     "    \n",
     "plt.show()\n",
-    "    \n",
-    "#plt.savefig('spectogram_parameter_testing.png', dpi=600, facecolor='White')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x13eaad0a0>"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cbar_ax = figure.add_axes([0.85, 0.15, 0.05, 0.7])\n",
-    "figure.colorbar(img, cax=cbar_ax ) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-60., -50., -40., -30., -20., -10.,   0.,  10.])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cb.ax.get_yticks()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Text(1, -60.0, '−60'),\n",
-       " Text(1, -50.0, '−50'),\n",
-       " Text(1, -40.0, '−40'),\n",
-       " Text(1, -30.0, '−30'),\n",
-       " Text(1, -20.0, '−20'),\n",
-       " Text(1, -10.0, '−10'),\n",
-       " Text(1, 0.0, '0'),\n",
-       " Text(1, 10.0, '10')]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cb.ax.get_yticklabels()"
+    "os.chdir('/Users/saroltagabulya/git/Orca/spectogram_param_testing/')\n",
+    "plt.savefig('spectogram_parameter_testing_overview_2.png', dpi=600, facecolor='White')"
    ]
   },
   {
