--- a/Spectograms.ipynb
+++ b/Spectograms.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f53116e53e384ee8838ad317ed95f64a",
+       "model_id": "c741be9ae31345448cd291d6e3127405",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        " '2017-02-04--10-29-52--00-00-03--C.wav']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,13 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_wav(file, sample_rate):\n",
     "    y_all, sr = librosa.load(file, sr=sample_rate)\n",
-    "    y=y_all[0]\n",
+    "    #y=y_all[0]\n",
+    "    y=y_all\n",
     "    return y, sr\n",
     "\n",
     "def wav_to_spect(y, sr, file): #, call_wav\n",
@@ -174,14 +175,15 @@
     "    start_utc=metadata['start_utc']\n",
     "    duration_seconds=metadata['duration_seconds']\n",
     "    \n",
-    "    nfft=1024\n",
+    "    nfft=2048\n",
     "    hop_length=32\n",
-    "    win_length=400\n",
+    "    win_length=2048\n",
+    "    win_type='hann'\n",
     "    \n",
     "    if len(y)>0:\n",
     "        # Convert to spectogram \n",
     "        \n",
-    "        Y = librosa.stft(y, n_fft=nfft, hop_length=hop_length, win_length=win_length) \n",
+    "        Y = librosa.stft(y, n_fft=nfft, hop_length=hop_length, win_length=win_length, window=win_type) \n",
     "        Ydb = librosa.amplitude_to_db(abs(Y), ref=1)\n",
     "        \n",
     "        librosa.display.specshow(Ydb, cmap='seismic', sr=sr, x_axis='time', y_axis='fft', hop_length=32)\n",
@@ -200,7 +202,7 @@
     "        plt.savefig(file[:-3] + 'png', bbox_inches='tight', dpi=600, facecolor='White')\n",
     "        plt.close()\n",
     "    \n",
-    "        return nfft, hop_length, win_length\n",
+    "        return nfft, hop_length, win_length, win_type\n",
     "    \n",
     "    else: \n",
     "        return 'Error with wav'"
@@ -215,31 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for w in list(range(len(wavs))): \n",
     "    wav=wavs[w]\n",
     "    y, sr =open_wav(wav, sample_rate)\n",
-    "    nfft, hop_length, win_length= wav_to_spect(y, sample_rate, wav)"
+    "    nfft, hop_length, win_length, win_type= wav_to_spect(y, sample_rate, wav)"
    ]
   },
   {
@@ -251,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,18 +245,26 @@
     "spect_meta['nfft']=nfft\n",
     "spect_meta['hop_length']=hop_length\n",
     "spect_meta['win_length']=win_length\n",
-    "spect_meta['sample_rate']=sr"
+    "spect_meta['sample_rate']=sr\n",
+    "spect_meta['window_type']=win_type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('spect_meta.yml', 'w') as outfile:\n",
     "    yaml.dump(spect_meta, outfile)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
